--- a/templates/add_contact.html
+++ b/templates/add_contact.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Add New Contact</h2>
+<h2>Add New Contact:</h2>
 <form method="POST">
     {{ form.csrf_token }}
     <div class="mb-3">
